--- a/app/src/main/res/menu/popup_menu.xml
+++ b/app/src/main/res/menu/popup_menu.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android" >
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <item android:id="@+id/settings"
         android:title="Ustawienia" />
     <item android:id="@+id/share"
         android:title="Udostępnij" />
     <item android:id="@+id/logout"
         android:title="Wyloguj" />
-
 </menu>
