--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -76,11 +76,14 @@
             android:id="@+id/fab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:layout_gravity="bottom|end"
+            android:layout_margin="75dp"
             android:backgroundTint="@color/white"
             android:src="@drawable/baseline_add_24"
-            app:tint="@color/appred"/>
+            app:tint="@color/appred"
+            app:layout_anchor="@id/bottomAppBar"
+            app:layout_anchorGravity="top|end"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" />
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
