--- a/app/src/main/res/layout/activity_qrcode.xml
+++ b/app/src/main/res/layout/activity_qrcode.xml
@@ -5,10 +5,34 @@
     android:layout_height="match_parent"
     tools:context=".QRCodeActivity">
 
+    <TextView
+        android:id="@+id/disclaimerTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Pokaż kod lekarzowi do zeskanowania"
+        android:layout_above="@id/qrCodeImageView"
+        android:layout_centerHorizontal="true"
+        android:textSize="16sp"/>
+
     <ImageView
         android:id="@+id/qrCodeImageView"
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:layout_centerInParent="true" />
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_below="@id/qrCodeImageView"
+        android:layout_centerHorizontal="true">
+
+        <TextView
+            android:id="@+id/dataAccessTextView"
+            android:layout_width="260dp"
+            android:layout_height="wrap_content"
+            android:text="Lekarz po zeskanowaniu będzie miał dostęp do podstawowych danych osobowych, twojej historii z dziennika ciśnień, przyjmowanych leków oraz udostępnionych dokumentów."
+            android:textSize="12sp" />
+    </LinearLayout>
 
 </RelativeLayout>
