Zrobiony działający QR Code

--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -15,6 +15,7 @@
         android:src="@drawable/logo"/>
 
     <TextView
+        android:id="@+id/name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Tu będzie imie i nazwisko"
@@ -22,6 +23,7 @@
         android:textStyle="bold"/>
 
     <TextView
+        android:id="@+id/email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Tu będzie email"
