Dodane więcej danych do wstępnych ustawień.

--- a/app/src/main/res/layout/activity_initial_settings.xml
+++ b/app/src/main/res/layout/activity_initial_settings.xml
@@ -30,6 +30,35 @@
         android:layout_height="wrap_content"
         android:hint="Data Urodzenia" />
 
+    <EditText
+        android:id="@+id/editTextHeight"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Wzrost" />
+
+    <EditText
+        android:id="@+id/editTextWeight"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Waga" />
+
+    <RadioGroup
+        android:id="@+id/radioGroupGender"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <RadioButton
+            android:id="@+id/radioButtonMale"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Mężczyzna" />
+        <RadioButton
+            android:id="@+id/radioButtonFemale"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Kobieta" />
+    </RadioGroup>
+
     <RadioGroup
         android:id="@+id/radioGroupRole"
         android:layout_width="match_parent"
