Dodana zmiana motywu taka działająca.

--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:showIn = "navigation_view">
 
@@ -28,8 +29,15 @@
             android:title="O nas"/>
     </group>
     <item
-        android:title="">
+        android:title="Pozostałe">
         <menu>
+            <item
+                android:id="@+id/theme_switch"
+                android:icon="@drawable/baseline_change_circle_24"
+                android:title="Motyw"
+                app:showAsAction="always">
+            </item>
+
             <item
                 android:id="@+id/nav_logout"
                 android:icon="@drawable/baseline_exit_to_app_24"
