--- a/app/src/main/res/layout/activity_initial_settings.xml
+++ b/app/src/main/res/layout/activity_initial_settings.xml
@@ -92,12 +92,26 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Numer telefonu kontaktowej osoby" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Wybierz lekarza prowadzącego:"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="8dp"/>
+
+        <Spinner
+            android:id="@+id/doctorSpinner"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:autofillHints="Wybierz lekarza prowadzącego"/>
     </LinearLayout>
+
 
     <Button
         android:id="@+id/buttonSave"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Zapisz" />
+        android:text="Zapisz"
+        android:layout_marginTop="16dp"/>
 
 </LinearLayout>
