Zrobione ustawienia, działają.

--- a/app/src/main/res/layout/activity_initial_settings.xml
+++ b/app/src/main/res/layout/activity_initial_settings.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:padding="16dp">
 
@@ -111,6 +112,8 @@
         android:id="@+id/buttonSave"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:backgroundTint="@color/appred"
+        app:cornerRadius="20dp"
         android:text="Zapisz"
         android:layout_marginTop="16dp"/>
 
