Walka z dodawaniem leku przez dialog_box

--- a/app/src/main/res/layout/bottomsheetlayout.xml
+++ b/app/src/main/res/layout/bottomsheetlayout.xml
@@ -64,6 +64,29 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/addMedicine"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="10dp">
+
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/baseline_medication_24"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Dodaj lek"
+            android:textColor="@color/appred"
+            android:layout_marginLeft="30dp"
+            android:textSize="16sp"/>
+
+    </LinearLayout>
+
+    <LinearLayout
         android:id="@+id/addFile"
         android:orientation="horizontal"
         android:layout_width="match_parent"
