--- a/app/src/main/res/layout/dialog_add_medicine.xml
+++ b/app/src/main/res/layout/dialog_add_medicine.xml
@@ -49,12 +49,77 @@
             android:textColor="@color/appred"
             android:textSize="16sp"
             android:layout_marginStart="20dp"
-            android:layout_marginBottom="30dp"
+            android:layout_marginBottom="16dp"
             android:maxLines="1"
             android:backgroundTint="@color/appred"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/addMedicineTitle"/>
+            app:layout_constraintBottom_toTopOf="@id/doseSpinner"
+            app:layout_constraintTop_toBottomOf="@id/desc"/>
+
+        <Spinner
+            android:id="@+id/doseSpinner"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="20dp"
+            app:layout_constraintTop_toBottomOf="@id/medicineNameBox"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+        <EditText
+            android:id="@+id/quantityEditText"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="20dp"
+            android:hint="Wprowadź ilość"
+            app:layout_constraintTop_toBottomOf="@id/doseSpinner"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+        <CheckBox
+            android:id="@+id/morningCheckBox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Rano"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@id/quantityEditText"
+            app:layout_constraintStart_toStartOf="parent"/>
+
+        <CheckBox
+            android:id="@+id/noonCheckBox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Południe"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@id/morningCheckBox"
+            app:layout_constraintStart_toStartOf="parent"/>
+
+        <CheckBox
+            android:id="@+id/eveningCheckBox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Wieczór"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@id/noonCheckBox"
+            app:layout_constraintStart_toStartOf="parent"/>
+
+        <EditText
+            android:id="@+id/noteEditText"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="20dp"
+            android:hint="Dodaj notatkę (opcjonalnie)"
+            app:layout_constraintTop_toBottomOf="@id/eveningCheckBox"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
         <Button
             android:layout_width="0dp"
@@ -67,10 +132,9 @@
             android:backgroundTint="@color/appred"
             android:textSize="14sp"
             app:cornerRadius="20dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="16dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/medicineNameBox"
+            app:layout_constraintTop_toBottomOf="@id/noteEditText"
             app:layout_constraintBottom_toBottomOf="@id/dialogBox"
             app:layout_constraintEnd_toStartOf="@id/btnAddMedicine"/>
 
@@ -80,14 +144,14 @@
             android:id="@+id/btnAddMedicine"
             android:text="Dodaj"
             android:layout_marginStart="10dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="16dp"
             android:layout_marginEnd="40dp"
             android:textColor="@color/white"
             android:backgroundTint="@color/appred"
             android:textSize="14sp"
             app:cornerRadius="20dp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/noteEditText"
             app:layout_constraintBottom_toBottomOf="@id/dialogBox"
             app:layout_constraintStart_toEndOf="@id/btnCancelAddMedicine"/>
 
