--- a/app/src/main/res/layout/dialog_add_medicine.xml
+++ b/app/src/main/res/layout/dialog_add_medicine.xml
@@ -40,7 +40,8 @@
             android:textSize="16sp"
             android:textColor="@color/appred"
             app:layout_constraintTop_toBottomOf="@id/addMedicineTitle"
-            app:layout_constraintBottom_toTopOf="@id/medicineNameBox"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
         <AutoCompleteTextView
             android:layout_width="300dp"
@@ -49,21 +50,35 @@
             android:textColor="@color/appred"
             android:textSize="16sp"
             android:layout_marginStart="20dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="20dp"
             android:layout_marginBottom="16dp"
             android:maxLines="1"
             android:backgroundTint="@color/appred"
+            app:layout_constraintTop_toBottomOf="@id/desc"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/doseSpinner"
-            app:layout_constraintTop_toBottomOf="@id/desc"/>
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+        <TextView
+            android:id="@+id/doseLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Dawka"
+            android:textSize="16sp"
+            android:textColor="@color/appred"
+            android:layout_marginStart="20dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/medicineNameBox"
+            app:layout_constraintBottom_toTopOf="@id/doseSpinner"/>
 
         <Spinner
             android:id="@+id/doseSpinner"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="20dp"
-            app:layout_constraintTop_toBottomOf="@id/medicineNameBox"
+            app:layout_constraintTop_toBottomOf="@id/doseLabel"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
 
@@ -72,8 +87,10 @@
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="20dp"
+            android:textColorHint="@color/appred"
+            android:inputType="number"
             android:hint="Wprowadź ilość"
             app:layout_constraintTop_toBottomOf="@id/doseSpinner"
             app:layout_constraintStart_toStartOf="parent"
@@ -83,9 +100,10 @@
             android:id="@+id/morningCheckBox"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="@color/appred"
             android:text="Rano"
             android:layout_marginStart="20dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@id/quantityEditText"
             app:layout_constraintStart_toStartOf="parent"/>
 
@@ -93,6 +111,7 @@
             android:id="@+id/noonCheckBox"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="@color/appred"
             android:text="Południe"
             android:layout_marginStart="20dp"
             android:layout_marginTop="8dp"
@@ -103,6 +122,7 @@
             android:id="@+id/eveningCheckBox"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="@color/appred"
             android:text="Wieczór"
             android:layout_marginStart="20dp"
             android:layout_marginTop="8dp"
@@ -114,8 +134,9 @@
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="20dp"
+            android:textColorHint="@color/appred"
             android:hint="Dodaj notatkę (opcjonalnie)"
             app:layout_constraintTop_toBottomOf="@id/eveningCheckBox"
             app:layout_constraintStart_toStartOf="parent"
