--- a/app/src/main/res/layout/dialog_add_medicine.xml
+++ b/app/src/main/res/layout/dialog_add_medicine.xml
@@ -80,7 +80,8 @@
             android:layout_marginEnd="20dp"
             app:layout_constraintTop_toBottomOf="@id/doseLabel"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            android:entries="@array/dose_options"/>
 
         <EditText
             android:id="@+id/quantityEditText"
