--- a/app/src/main/res/layout/fragment_medicine.xml
+++ b/app/src/main/res/layout/fragment_medicine.xml
@@ -1,17 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MedicineFragment">
+    android:layout_height="match_parent">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <ListView
+        android:id="@+id/listViewMedicines"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Leki"
-        android:gravity="center"
-        android:textSize="30sp"
-        android:textColor="@color/appred"/>
+        android:layout_marginTop="?attr/actionBarSize" />
 
-</FrameLayout>
+</RelativeLayout>
