--- a/app/src/main/res/layout/list_item_medicine.xml
+++ b/app/src/main/res/layout/list_item_medicine.xml
@@ -41,29 +41,32 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/imageMorning"
+        <TextView
+            android:id="@+id/textMorning"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:src="@drawable/baseline_medication_24"
-            android:contentDescription="Rano" />
+            android:text="Rano:"
+            android:textSize="14sp"
+            android:textStyle="bold" />
 
-        <ImageView
-            android:id="@+id/imageNoon"
+        <TextView
+            android:id="@+id/textNoon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:src="@drawable/baseline_medication_24"
-            android:contentDescription="Południe" />
+            android:text="Południe:"
+            android:textSize="14sp"
+            android:textStyle="bold" />
 
-        <ImageView
-            android:id="@+id/imageEvening"
+        <TextView
+            android:id="@+id/textEvening"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:src="@drawable/baseline_medication_24"
-            android:contentDescription="Wieczór" />
+            android:text="Wieczór:"
+            android:textSize="14sp"
+            android:textStyle="bold" />
 
     </LinearLayout>
 
