--- a/app/src/main/res/layout/dialog_edit_medicine.xml
+++ b/app/src/main/res/layout/dialog_edit_medicine.xml
@@ -146,10 +146,10 @@
         <Button
             android:layout_width="0dp"
             android:layout_height="50dp"
-            android:id="@+id/btnCancelAddMedicine"
+            android:id="@+id/btnDeleteMedicine"
             android:layout_marginStart="40dp"
             android:layout_marginEnd="10dp"
-            android:text="Anuluj"
+            android:text="Usuń"
             android:textColor="@color/white"
             android:backgroundTint="@color/appred"
             android:textSize="14sp"
@@ -158,13 +158,13 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/noteEditText"
             app:layout_constraintBottom_toBottomOf="@id/dialogBox"
-            app:layout_constraintEnd_toStartOf="@id/btnAddMedicine"/>
+            app:layout_constraintEnd_toStartOf="@id/btnUpdateMedicine"/>
 
         <Button
             android:layout_width="0dp"
             android:layout_height="50dp"
-            android:id="@+id/btnAddMedicine"
-            android:text="Dodaj"
+            android:id="@+id/btnUpdateMedicine"
+            android:text="Edytuj"
             android:layout_marginStart="10dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="40dp"
@@ -175,7 +175,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/noteEditText"
             app:layout_constraintBottom_toBottomOf="@id/dialogBox"
-            app:layout_constraintStart_toEndOf="@id/btnCancelAddMedicine"/>
+            app:layout_constraintStart_toEndOf="@id/btnDeleteMedicine"/>
 
         <ProgressBar
             android:id="@+id/progressBar"
