--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -8,7 +8,7 @@
     android:orientation="vertical"
     android:gravity="center"
     android:background="@drawable/pagebkg"
-    tools:context=".SignUpActivity">
+    tools:context=".loginregister.SignUpActivity">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
