--- a/app/src/main/res/layout/dialog_add_medicine.xml
+++ b/app/src/main/res/layout/dialog_add_medicine.xml
@@ -75,6 +75,7 @@
             android:id="@+id/doseSpinner"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
+            android:theme="@style/spinnerTheme"
             android:layout_marginStart="20dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="20dp"
@@ -91,6 +92,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="20dp"
             android:textColorHint="@color/appred"
+            android:backgroundTint="@color/appred"
             android:inputType="number"
             android:hint="Wprowadź ilość"
             app:layout_constraintTop_toBottomOf="@id/doseSpinner"
@@ -138,6 +140,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="20dp"
             android:textColorHint="@color/appred"
+            android:backgroundTint="@color/appred"
             android:hint="Dodaj notatkę (opcjonalnie)"
             app:layout_constraintTop_toBottomOf="@id/eveningCheckBox"
             app:layout_constraintStart_toStartOf="parent"
