--- a/app/src/main/res/layout/dialog_edit_medicine.xml
+++ b/app/src/main/res/layout/dialog_edit_medicine.xml
@@ -75,6 +75,7 @@
             android:id="@+id/doseSpinner"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
+            android:theme="@style/spinnerTheme"
             android:layout_marginStart="20dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="20dp"
@@ -89,8 +90,10 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginTop="8dp"
+            android:textColor="@color/appred"
             android:layout_marginEnd="20dp"
             android:textColorHint="@color/appred"
+            android:backgroundTint="@color/appred"
             android:inputType="number"
             android:hint="Wprowadź ilość"
             app:layout_constraintTop_toBottomOf="@id/doseSpinner"
@@ -139,6 +142,7 @@
             android:layout_marginEnd="20dp"
             android:textColorHint="@color/appred"
             android:hint="Dodaj notatkę (opcjonalnie)"
+            android:backgroundTint="@color/appred"
             app:layout_constraintTop_toBottomOf="@id/eveningCheckBox"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
@@ -146,10 +150,10 @@
         <Button
             android:layout_width="0dp"
             android:layout_height="50dp"
-            android:id="@+id/btnDeleteMedicine"
+            android:id="@+id/btnCancelEditMedicine"
             android:layout_marginStart="40dp"
             android:layout_marginEnd="10dp"
-            android:text="Usuń"
+            android:text="Anuluj"
             android:textColor="@color/white"
             android:backgroundTint="@color/appred"
             android:textSize="14sp"
@@ -175,7 +179,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/noteEditText"
             app:layout_constraintBottom_toBottomOf="@id/dialogBox"
-            app:layout_constraintStart_toEndOf="@id/btnDeleteMedicine"/>
+            app:layout_constraintStart_toEndOf="@id/btnCancelEditMedicine"/>
 
         <ProgressBar
             android:id="@+id/progressBar"
