--- a/app/src/main/res/layout/dialog_add_medicine.xml
+++ b/app/src/main/res/layout/dialog_add_medicine.xml
@@ -93,6 +93,7 @@
             android:layout_marginEnd="20dp"
             android:textColorHint="@color/appred"
             android:backgroundTint="@color/appred"
+            android:textColor="@color/appred"
             android:inputType="number"
             android:hint="Wprowadź ilość"
             app:layout_constraintTop_toBottomOf="@id/doseSpinner"
