Dodane dodawanie pliku, ale nie działa. Poprawić muszę.

--- a/app/src/main/res/layout/item_pressure.xml
+++ b/app/src/main/res/layout/item_pressure.xml
@@ -52,4 +52,12 @@
         android:textSize="14sp"
         
         android:layout_marginTop="2dp"/>
+
+    <TextView
+        android:id="@+id/textNote"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="14sp"
+
+        android:layout_marginTop="2dp"/>
 </LinearLayout>
