--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,7 +14,10 @@
         <!-- Customize your theme here. -->
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
+        <item name="dialogBoxBackground">@drawable/white_box</item>
+        <item name="bottomSheetDialogTheme">@drawable/dialogbkg</item>
     </style>
+
 
     <style name="Base.Theme.KardioL0g" parent="Theme.Material3.DayNight.NoActionBar">
 
