--- a/app/src/main/res/layout/dialog_add_file.xml
+++ b/app/src/main/res/layout/dialog_add_file.xml
@@ -9,10 +9,12 @@
     android:layout_height="match_parent">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/dialogBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/white_box"
+        android:background="?attr/dialogBoxBackground"
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
