--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -68,7 +68,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="70dp"
                 android:layout_marginRight="5dp"
-                android:backgroundTint="@color/white"
+                android:backgroundTint="?attr/colorOnPrimary"
                 android:src="@drawable/baseline_add_24"
                 app:tint="@color/appred"
                 app:layout_constraintBottom_toBottomOf="@id/bottomAppBar"
