--- a/app/src/main/res/layout/dialog_add_file.xml
+++ b/app/src/main/res/layout/dialog_add_file.xml
@@ -59,6 +59,23 @@
             app:layout_constraintEnd_toEndOf="parent"
             android:entries="@array/file_types" />
 
+
+        <Button
+            android:id="@+id/btnSelectDate"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:text="Wybierz datę badania"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="20dp"
+            android:backgroundTint="@color/appred"
+            android:textColor="@color/white"
+            android:textSize="14sp"
+            app:cornerRadius="20dp"
+            app:layout_constraintTop_toBottomOf="@id/fileTypeSpinner"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
         <Button
             android:id="@+id/btnSelectFile"
             android:layout_width="0dp"
@@ -71,7 +88,7 @@
             android:textColor="@color/white"
             android:textSize="14sp"
             app:cornerRadius="20dp"
-            app:layout_constraintTop_toBottomOf="@id/fileTypeSpinner"
+            app:layout_constraintTop_toBottomOf="@id/btnSelectDate"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
 
