--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -18,8 +18,7 @@
         <item name="bottomSheetDialogTheme">@drawable/dialogbkg_black</item>
     </style>
     <!-- Base application theme. -->
-    <style name="Base.Theme.KardioL0g" parent="Theme.Material3.DayNight.NoActionBar">
-    </style>
+    <style name="Base.Theme.KardioL0g" parent="Theme.Material3.DayNight.NoActionBar"></style>
 
     <style name="Theme.MyApp" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Atrybuty motywu -->
